# OxXlObs

./: .gitignore  AGENTS.md  CHARTER.md  CURRENT_BLOCKERS.md  Cargo.toml  OPERATIONS.md  README.md
docs/: IN_PROGRESS_FEATURE_WORKLIST.md  LOCAL_EXECUTION_DOCTRINE.md
docs/decisions/: DEC-001_OBSERVATION_TO_REPLAY_FIRST.md
docs/handoffs/: HANDOFF_SPREADSHEETML_VERIFICATION_UPDATE_001.md  README.md
docs/spec/: OXXLOBS_ARCHITECTURE_AND_CAPTURE_MODEL.md  OXXLOBS_BUNDLE_EMISSION_AND_HANDOFF_MODEL.md  OXXLOBS_CAPABILITY_AND_PACK_TRACEABILITY.md  OXXLOBS_CLI_CONTRACT.md  OXXLOBS_ENVIRONMENT_AND_PROVENANCE_MODEL.md  OXXLOBS_IMPLEMENTATION_BASELINE.md  OXXLOBS_SCENARIO_REGISTER.md  OXXLOBS_SCOPE_AND_BOUNDARY.md  OXXLPLAY_ARCHITECTURE_AND_CAPTURE_MODEL.md  OXXLPLAY_BUNDLE_EMISSION_AND_HANDOFF_MODEL.md  OXXLPLAY_CAPABILITY_AND_PACK_TRACEABILITY.md  OXXLPLAY_CLI_CONTRACT.md  OXXLPLAY_ENVIRONMENT_AND_PROVENANCE_MODEL.md  OXXLPLAY_IMPLEMENTATION_BASELINE.md  OXXLPLAY_ONECALC_OBSERVATION_CONSUMER_CONTRACT.md  OXXLPLAY_SCENARIO_REGISTER.md  OXXLPLAY_SCOPE_AND_BOUNDARY.md  README.md
docs/test-corpus/: README.md
docs/test-corpus/bundles/: README.md
docs/test-corpus/bundles/xlobs_bundle_seed_handoff_001/: README.md  bundle.json  handoff-validation.json
docs/test-corpus/bundles/xlobs_witness_seed_divergence_001/: README.md  witness-seed.json
docs/test-corpus/bundles/xlplay_bundle_seed_handoff_001/: README.md  bundle.json  handoff-validation.json
docs/test-corpus/bundles/xlplay_witness_seed_divergence_001/: README.md  witness-seed.json
docs/test-corpus/excel/: README.md
docs/test-corpus/excel/xlobs_capture_loss_formula_unavailable_001/: README.md  capture.json  scenario.json
docs/test-corpus/excel/xlobs_capture_values_formulae_001/: README.md  scenario.json  workbook.xlsx
docs/test-corpus/excel/xlobs_manifest_invalid_missing_surface_001/: README.md  scenario.json
docs/test-corpus/excel/xlobs_manifest_minimal_valid_001/: README.md  scenario.json
docs/test-corpus/excel/xlobs_provenance_excel_build_001/: README.md  bridge.json  provenance.json
docs/test-runs/: README.md  W001_REPO_BOOTSTRAP_AND_BOUNDARY.md  W002_SCENARIO_AND_CAPTURE_CONTRACT_BASELINE.md  W003_ENVIRONMENT_FINGERPRINT_AND_BRIDGE_ENVELOPE.md  W004_REPLAY_READY_BUNDLE_EMISSION_AND_HANDOFF.md  W005_DIFFERENTIAL_WITNESS_SEED_BASELINE.md  W006_STABLE_WINDOWS_EXECUTION_DRIVER.md  W007_FIRST_CROSS_REPO_REPLAY_AND_DIFF_CONSUMPTION.md  W008_SPREADSHEETML_VERIFICATION_OBSERVATION_EXPANSION.md
docs/upstream/: NOTES_FOR_OXREPLAY.md  README.md
docs/worksets/: README.md  W001_REPO_BOOTSTRAP_AND_BOUNDARY.md  W002_SCENARIO_AND_CAPTURE_CONTRACT_BASELINE.md  W003_ENVIRONMENT_FINGERPRINT_AND_BRIDGE_ENVELOPE.md  W004_REPLAY_READY_BUNDLE_EMISSION_AND_HANDOFF.md  W005_DIFFERENTIAL_WITNESS_SEED_BASELINE.md  W006_STABLE_WINDOWS_EXECUTION_DRIVER.md  W007_FIRST_CROSS_REPO_REPLAY_AND_DIFF_CONSUMPTION.md  W008_SPREADSHEETML_VERIFICATION_OBSERVATION_EXPANSION.md
formal/: README.md
scripts/: README.md  invoke-excel-observation.ps1  meta-check.ps1
src/: README.md
src/oxxlobs-abstractions/: Cargo.toml
src/oxxlobs-abstractions/src/: lib.rs
src/oxxlobs-bridge/: Cargo.toml
src/oxxlobs-bridge/src/: lib.rs
src/oxxlobs-bundle/: Cargo.toml
src/oxxlobs-bundle/src/: lib.rs
src/oxxlobs-capture/: Cargo.toml
src/oxxlobs-capture/src/: lib.rs
src/oxxlobs-cli/: Cargo.toml
src/oxxlobs-cli/src/: main.rs
src/oxxlobs-provenance/: Cargo.toml
src/oxxlobs-provenance/src/: lib.rs
src/oxxlobs-scenario/: Cargo.toml
src/oxxlobs-scenario/src/: lib.rs
src/oxxlplay-abstractions/: Cargo.toml
src/oxxlplay-abstractions/src/: lib.rs
src/oxxlplay-bridge/: Cargo.toml
src/oxxlplay-bridge/src/: lib.rs
src/oxxlplay-bundle/: Cargo.toml
src/oxxlplay-bundle/src/: lib.rs
src/oxxlplay-capture/: Cargo.toml
src/oxxlplay-capture/src/: lib.rs
src/oxxlplay-cli/: Cargo.toml
src/oxxlplay-cli/src/: main.rs
src/oxxlplay-provenance/: Cargo.toml
src/oxxlplay-provenance/src/: lib.rs
src/oxxlplay-scenario/: Cargo.toml
src/oxxlplay-scenario/src/: lib.rs
states/: README.md
states/excel/: README.md
states/excel/xlobs_capture_values_formulae_001/: bridge.json  bundle.json  driver-run.json  environment.json  oxreplay-manifest.json  oxreplay-replay-report.json  oxreplay-validate-bundle-report.json  provenance.json
states/excel/xlobs_provenance_excel_build_001/: environment.json
states/excel/xlplay_capture_spreadsheetml_formatting_001/: bridge.json  bundle.json  capture.json  driver-run.json  environment.json  oxreplay-manifest.json  provenance.json
states/excel/xlplay_capture_values_formulae_001/: bridge.json  bundle.json  capture.json  driver-run.json  environment.json  oxreplay-manifest.json  oxreplay-replay-report.json  oxreplay-validate-bundle-report.json  provenance.json
states/excel/xlplay_provenance_excel_build_001/: environment.json
tests/: README.md
tools/: README.md
(+22 files in other folders)
