[workspace]
resolver = "2"
members = [
    "src/oxxlobs-abstractions",
    "src/oxxlobs-scenario",
    "src/oxxlobs-capture",
    "src/oxxlobs-provenance",
    "src/oxxlobs-bundle",
    "src/oxxlobs-bridge",
    "src/oxxlobs-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["DNA Kode"]
repository = "https://github.com/DnaCalc/OxXlObs"
publish = false

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"
