[workspace]
resolver = "2"
members = [
    "src/oxxlplay-abstractions",
    "src/oxxlplay-scenario",
    "src/oxxlplay-capture",
    "src/oxxlplay-provenance",
    "src/oxxlplay-bundle",
    "src/oxxlplay-bridge",
    "src/oxxlplay-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["DNA Kode"]
repository = "https://github.com/DnaCalc/OxXlPlay"
publish = false

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"
