[package]
name = "oxxlobs-bridge"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
oxxlobs-abstractions = { path = "../oxxlobs-abstractions" }
serde.workspace = true

[lints]
workspace = true
