[package]
name = "oxxlobs-bundle"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
oxxlobs-abstractions = { path = "../oxxlobs-abstractions" }
oxxlobs-bridge = { path = "../oxxlobs-bridge" }
oxxlobs-capture = { path = "../oxxlobs-capture" }
oxxlobs-provenance = { path = "../oxxlobs-provenance" }
oxxlobs-scenario = { path = "../oxxlobs-scenario" }
serde.workspace = true
thiserror.workspace = true

[lints]
workspace = true
