[package]
name = "oxxlobs-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
serde_json.workspace = true

[[bin]]
name = "dna-xl-obs"
path = "src/main.rs"

[lints]
workspace = true
