[package]
name = "oxxlplay-bundle"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
oxxlplay-abstractions = { path = "../oxxlplay-abstractions" }
oxxlplay-bridge = { path = "../oxxlplay-bridge" }
oxxlplay-capture = { path = "../oxxlplay-capture" }
oxxlplay-provenance = { path = "../oxxlplay-provenance" }
oxxlplay-scenario = { path = "../oxxlplay-scenario" }
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
serde_json.workspace = true

[lints]
workspace = true
