[package]
name = "oxxlplay-capture"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
oxxlplay-abstractions = { path = "../oxxlplay-abstractions" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
[lints]
workspace = true
